--- a/marketplace/pom.xml
+++ b/marketplace/pom.xml
@@ -27,7 +27,7 @@
     <dependency>
       <groupId>org.nuxeo.shibboleth.invitation</groupId>
       <artifactId>nuxeo-shibboleth-invitation</artifactId>
-      <version>7.4-SNAPSHOT</version>
+      <version>6.0-HF18-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
