--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.distribution</groupId>
     <artifactId>nuxeo-distribution</artifactId>
-    <version>7.4-SNAPSHOT</version>
+    <version>6.0-HF18-SNAPSHOT</version>
   </parent>
 
   <groupId>org.nuxeo.shibboleth.invitation.marketplace</groupId>
