NXP-17228: finalize mp aligned on 6.0-HF18-SNAPSHOT

--- a/marketplace/src/main/resources/package.xml
+++ b/marketplace/src/main/resources/package.xml
@@ -20,8 +20,8 @@
   </platforms>
   <!-- Dependencies on other packages -->
    <dependencies>
-     <package>shibboleth-authentication</package>
-     <package>nuxeo-platform-user-registration</package>
+     <package>shibboleth-authentication:2.2.0:2.2.0</package>
+     <package>nuxeo-platform-user-registration:1.5.0:1.5.0</package>
    </dependencies>
   <!-- Conflicts with other packages -->
   <!-- <conflicts> -->
