--- a/marketplace/src/main/resources/package.xml
+++ b/marketplace/src/main/resources/package.xml
@@ -18,6 +18,7 @@
     <platform>cap-@DISTRIB_VERSION@</platform>
     <platform>cap-@DISTRIB_VERSION@-HF*</platform>
   </platforms>
+  <visibility>MARKETPLACE</visibility>
   <!-- Dependencies on other packages -->
    <dependencies>
      <package>shibboleth-authentication:2.2.0:2.2.0</package>
