--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.nuxeo.ecm.distribution</groupId>
@@ -14,21 +13,25 @@
   <name>Nuxeo Marketplace packaging of nuxeo-shibboleth-invitation</name>
   <version>1.1-SNAPSHOT</version>
 
-  <properties>
-    <marketplace.nuxeo-shibboleth-invitation.version>1.1-SNAPSHOT
-    </marketplace.nuxeo-shibboleth-invitation.version>
-  </properties>
-
   <modules>
     <module>marketplace</module>
   </modules>
+
+  <profiles>
+    <profile>
+      <id>ftest</id>
+      <modules>
+        <module>ftest/webdriver</module>
+      </modules>
+    </profile>
+  </profiles>
 
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.nuxeo.shibboleth.invitation.marketplace</groupId>
-        <artifactId>marketplace</artifactId>
-        <version>${marketplace.nuxeo-shibboleth-invitation.version}</version>
+        <artifactId>marketplace-shibboleth-invitation</artifactId>
+        <version>${project.version}</version>
         <type>zip</type>
       </dependency>
     </dependencies>
@@ -67,5 +70,35 @@
       </snapshots>
     </repository>
   </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>public</id>
+      <url>http://maven.nuxeo.org/nexus/content/groups/public</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>public-snapshot</id>
+      <url>http://maven.nuxeo.org/nexus/content/groups/public-snapshot</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <updatePolicy>always</updatePolicy>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
+
+  <scm>
+    <connection>scm:git:git://github.com/nuxeo/marketplace-shibboleth-invitation.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com:nuxeo/marketplace-shibboleth-invitation.git</developerConnection>
+    <url>https://github.com/nuxeo/marketplace-shibboleth-invitation</url>
+  </scm>
 
 </project>
