Revert "update dependency type to jar"
This reverts commit 52a9244bae9ac2ffaa5358d84d18e9869fc31181.

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <groupId>org.nuxeo.shibboleth.invitation.marketplace</groupId>
         <artifactId>marketplace-shibboleth-invitation</artifactId>
         <version>${project.version}</version>
+        <type>zip</type>
       </dependency>
     </dependencies>
   </dependencyManagement>
