--- a/marketplace/pom.xml
+++ b/marketplace/pom.xml
@@ -1,6 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.nuxeo.shibboleth.invitation.marketplace</groupId>
@@ -27,7 +26,6 @@
     <dependency>
       <groupId>org.nuxeo.shibboleth.invitation</groupId>
       <artifactId>nuxeo-shibboleth-invitation</artifactId>
-      <version>7.4-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
