--- a/marketplace/pom.xml
+++ b/marketplace/pom.xml
@@ -22,6 +22,12 @@
       <artifactId>nuxeo-distribution-cap</artifactId>
       <type>pom</type>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.distribution</groupId>
+      <artifactId>nuxeo-distribution-cap</artifactId>
+      <type>zip</type>
+      <scope>provided</scope>
+    </dependency>
     <!-- Additional bundles to be deployed by the MP -->
     <dependency>
       <groupId>org.nuxeo.shibboleth.invitation</groupId>
