NXP-18007: Make package public

--- a/marketplace/src/main/resources/package.xml
+++ b/marketplace/src/main/resources/package.xml
@@ -18,7 +18,7 @@
     <platform>cap-@DISTRIB_VERSION@</platform>
     <platform>cap-@DISTRIB_VERSION@-HF*</platform>
   </platforms>
-  <visibility>MARKETPLACE</visibility>
+  <visibility>PUBLIC</visibility>
   <!-- Dependencies on other packages -->
    <dependencies>
      <package>shibboleth-authentication</package>
