--- a/marketplace/src/main/resources/package.xml
+++ b/marketplace/src/main/resources/package.xml
@@ -15,8 +15,7 @@
   <production-state>production_ready</production-state>
   <supported>false</supported>
   <platforms>
-    <platform>cap-@DISTRIB_VERSION@</platform>
-    <platform>cap-@DISTRIB_VERSION@-HF*</platform>
+    <platform>server-@DISTRIB_VERSION@*</platform>
   </platforms>
   <visibility>PUBLIC</visibility>
   <!-- Dependencies on other packages -->
