--- a/marketplace/src/main/resources/package.xml
+++ b/marketplace/src/main/resources/package.xml
@@ -15,7 +15,8 @@
   <production-state>production_ready</production-state>
   <supported>false</supported>
   <platforms>
-    <platform>server-@DISTRIB_VERSION@*</platform>
+    <platform>server-@DISTRIB_VERSION@</platform>
+    <platform>server-@DISTRIB_VERSION@-*</platform>
   </platforms>
   <visibility>PUBLIC</visibility>
   <!-- Dependencies on other packages -->
