--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
       <id>ftest</id>
       <modules>
         <module>ftest/startup</module>
+        <module>ftest/webdriver</module>
       </modules>
     </profile>
   </profiles>
