--- a/marketplace/src/main/resources/package.xml
+++ b/marketplace/src/main/resources/package.xml
@@ -10,7 +10,7 @@
   <require-terms-and-conditions-acceptance>true</require-terms-and-conditions-acceptance>
    <nuxeo-validation>nuxeo_certified</nuxeo-validation>
   <production-state>production_ready</production-state>
-  <supported>false</supported>
+  <supported>true</supported>
   <platforms>
     <platform>server-@DISTRIB_VERSION@</platform>
     <platform>server-@DISTRIB_VERSION@-*</platform>
