NXP-27439: Fix JSF UI distrib artifacts dependency management

--- a/ftest/startup/pom.xml
+++ b/ftest/startup/pom.xml
@@ -15,6 +15,17 @@
     <some.password>setTheValueInYourSettings</some.password>
   </properties>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.nuxeo.ecm.distribution</groupId>
+        <artifactId>nuxeo-marketplace-jsf-ui</artifactId>
+        <type>zip</type>
+        <version>${nuxeo.distribution.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>org.nuxeo.shibboleth.invitation.marketplace</groupId>
