--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,19 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-jsf-ui</artifactId>
+        <type>pom</type>
+        <scope>import</scope>
+        <version>${nuxeo.distribution.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.distribution</groupId>
+        <artifactId>nuxeo-nxr-jsf-ui</artifactId>
+        <type>zip</type>
+        <version>${nuxeo.distribution.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.nuxeo.shibboleth.invitation.marketplace</groupId>
         <artifactId>marketplace-shibboleth-invitation</artifactId>
         <version>${project.version}</version>
